[package]
name = "fantoma"
version = "0.1.0"
edition = "2024"

[dependencies]
cpal = "0.15"
amari-core = { path = "../../industrial-algebra/amari/amari-core", default-features = false, features = ["std", "phantom-types"] }

[dev-dependencies]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
